added photo, text, and link to css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>About Sarah</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
 
+<body>
+	<h1>About Sarah</h1>
+
+	<div>
+		<p>Sarah is a 22 year old, who specializes in being a know-it-all. She enjoys her dog, Lilly, video games, and hates tomatoes.</p>
+
+		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and sarcasm. Many wish she wouldn't.</p>
+	</div>
+
+	<div>
+		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah"/>
+	</div>
 </body>
 </html>
