added section about Lilly, fixed a typo

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
 	<div>
 		<p>Sarah is a 22 year old, who specializes in being a know-it-all. She enjoys her dog, Lilly, video games, and hates tomatoes.</p>
 
-		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and sarcasm. Many wish she wouldn't.</p>
+		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and puns. Many wish she wouldn't.</p>
 	</div>
 
 	<div>
 		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah"/>
+	</div>
+
+
+	<div>
+		<p>Lilly is Sarah's dog. She is a 6-year-old pitbull who enjoys food, snacks, and treats. She is a good girl. She is Sarah's <b>knight in shining armor</b>.</p>
+	</div>
+
+	<div>
+		<img src="https://i.gyazo.com/1838aa0036d93d31b7968d8675ddd9ef.png" alt="Lilly in her Halloween costume"/>
 	</div>
 </body>
 </html>
