changed font size, modified Sarah's picture size

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div>
-		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah"/>
+		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah" width="500" height="735"/>
 	</div>
 
 
