added em style and text to html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div>
 		<p>Sarah is a 22 year old, who specializes in being a know-it-all. She enjoys her dog, Lilly, video games, and hates tomatoes.</p>
 
-		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and puns. Many wish she wouldn't.</p>
+		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and puns. Many wish she wouldn't. <em>She won't stop.</em></p>
 	</div>
 
 	<div>
