added fun facts section and css matching

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
 		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah" width="500" height="735"/>
 	</div>
 
-
 	<div>
 		<p>Lilly is Sarah's dog. She is a 6-year-old pitbull who enjoys food, snacks, and treats. She is a good girl. She is Sarah's <b>knight in shining armor</b>.</p>
 	</div>
 
 	<div>
 		<img src="https://i.gyazo.com/1838aa0036d93d31b7968d8675ddd9ef.png" alt="Lilly in her Halloween costume"/>
+	</div>
+
+	<h2>Fun Facts About Sarah</h2>
+
+	<div>
+		<ul>
+			<li>Sarah has visited numerous states, and lived in many others. This includes: Ohio, Florida, New Mexico, California, Nevada, and Texas.</li>
+			<li>Sarah has worked in multiple industries including law, hospitality, taxes, and now development!</li>
+			<li>Sarah loves hearing about conspiracy theories. Please share yours.</li>
+		</ul>
 	</div>
 </body>
 </html>
