added education to list

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div>
 		<ul>
 			<li>Sarah has visited numerous states, and lived in many others. This includes: Ohio, Florida, New Mexico, California, Nevada, and Texas.</li>
-			<li>Sarah has worked in multiple industries including law, hospitality, taxes, and now development!</li>
+			<li>Sarah has worked in multiple industries including law, hospitality, taxes, education, and now development!</li>
 			<li>Sarah loves hearing about conspiracy theories. Please share yours.</li>
 		</ul>
 	</div>
