created tomato loving version

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>About Sarah</title>
+	<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Hind&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
@@ -10,30 +11,31 @@
 	<h1>About Sarah</h1>
 
 	<div>
-		<p>Sarah is a 22 year old, who specializes in being a know-it-all. She enjoys her dog, Lilly, video games, and hates tomatoes.</p>
+		<p>Sarah is a 22 year old, who specializes in growing tomatoes. She loves tomatoes so so much!!</p>
+	</div>
 
-		<p>Sarah is known for her sarcasm, and frequently tells terrible dad jokes and puns. Many wish she wouldn't. <em>She won't stop.</em></p>
+	<div class="sarah-tomatoes">
+		<img id="sarah-img" src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah"/>
+		<img id="tomatoes" src="tomato.png" alt="A trio of tomotoes">
+		<h1>- YUM!</h1>
 	</div>
 
 	<div>
-		<img src="https://i.gyazo.com/dd942c3b3f1a33d293c9861ce5b8753b.png" alt="A photo of Sarah" width="500" height="735"/>
+		<p>Lilly is Sarah's dog. Sarah likes to dress her up as a <b>medieval court jester</b> so that she can throw tomatoes at her.</p>
+		<p>Dont worry, Lilly loves tomatoes too!</p>
 	</div>
 
 	<div>
-		<p>Lilly is Sarah's dog. She is a 6-year-old pitbull who enjoys food, snacks, and treats. She is a good girl. She is Sarah's <b>knight in shining armor</b>.</p>
-	</div>
-
-	<div>
-		<img src="https://i.gyazo.com/1838aa0036d93d31b7968d8675ddd9ef.png" alt="Lilly in her Halloween costume"/>
+		<img id="lilly-img" src="https://i.gyazo.com/1838aa0036d93d31b7968d8675ddd9ef.png" alt="Lilly in her Halloween costume"/>
 	</div>
 
 	<h2>Fun Facts About Sarah</h2>
 
 	<div>
 		<ul>
-			<li>Sarah has visited numerous states, and lived in many others. This includes: Ohio, Florida, New Mexico, California, Nevada, and Texas.</li>
-			<li>Sarah has worked in multiple industries including law, hospitality, taxes, education, and now development!</li>
-			<li>Sarah loves hearing about conspiracy theories. Please share yours.</li>
+			<li>Sarah has visited numerous tomato farms. This includes: Heinz tomato farm and Hunt's tomato farm.</li>
+			<li>Sarah has worked all her life in the tomato industry: tomatoes run in her blood!</li>
+			<li>Sarah loves hearing about tomato conspiracy theories. Please share yours.</li>
 		</ul>
 	</div>
 </body>
